try to change structure

--- a/madura/build.gradle
+++ b/madura/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
-//    compile project(':libvideoprp')
+    //    compile project(':libvideoprp')
+    compile files('libs/agora-rtc-sdk.jar')
 }
