--- a/madura/src/main/AndroidManifest.xml
+++ b/madura/src/main/AndroidManifest.xml
@@ -14,14 +14,8 @@
         android:allowBackup="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.halodoc.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".ui.halodoc.SampleCallActivity">
         </activity>
-        <activity android:name=".ui.halodoc.SampleCallActivity"></activity>
     </application>
 
 </manifest>
